--- a/belajar-html/final-project/cv-rifai/.vscode/launch.json
+++ b/belajar-html/final-project/cv-rifai/.vscode/launch.json
@@ -4,11 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Open home.html",
-            "file": "c:\\Users\\Lenovo\\Desktop\\project\\web-dev\\belajar-html\\final-project\\cv-rifai\\home\\home.html"
+            "name": "Open index.html",
+            "file": "c:\\Users\\Lenovo\\Desktop\\project\\web-dev\\belajar-html\\final-project\\cv-rifai\\index.html"
         }
     ]
 }
